# mapit

./: .git_commit.txt  .git_status.txt  .gitignore  .mapit_err.txt  .ts_debug.txt  .ts_versions.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh  test-annotate.sh  test_server.sh
.github/workflows/: release.yml
crates/mapit-ai/: Cargo.toml
crates/mapit-ai/src/: lib.rs  ollama.rs  openai_compatible.rs  provider.rs  tasks.rs
crates/mapit-ai/src/prompts/: answer.txt  classify.txt  flag_flaws.txt  flag_flaws_batch.txt  mod.rs  project_overview.txt  simulate.txt  summarize.txt  summarize_batch.txt  summarize_file.txt
crates/mapit-ai/tests/: phase5_integration.rs
crates/mapit-cli/: Cargo.toml
crates/mapit-cli/src/: main.rs
crates/mapit-cli/src/commands/: annotate.rs  ask.rs  config.rs  default_run.rs  explain.rs  find.rs  flaws.rs  init.rs  map.rs  mod.rs  open.rs  projects.rs  simulate.rs  status.rs  trace.rs
crates/mapit-core/: Cargo.toml
crates/mapit-core/src/: config.rs  control_flow.rs  lib.rs  walker.rs
crates/mapit-core/src/graph/: builder.rs  context.rs  incremental.rs  mod.rs  model.rs  store.rs
crates/mapit-core/src/languages/: asm.rs  c.rs  cpp.rs  javascript.rs  mod.rs  python.rs  rust.rs
crates/mapit-core/tests/: phase1_integration.rs  phase2_integration.rs  phase3_integration.rs  phase4_integration.rs
crates/mapit-core/tests/fixtures/c_asm_crosslang/: boot.h  boot.s  main.c
crates/mapit-core/tests/fixtures/three_file_rust/: .gitignore
crates/mapit-core/tests/fixtures/three_file_rust/src/: lib.rs  main.rs  utils.rs
crates/mapit-server/: Cargo.toml  build.rs
crates/mapit-server/embedded_dist/: index.html
crates/mapit-server/embedded_dist/assets/: index-7YMSzveL.js  index-Bo6six_Q.js  index-CKrrXuNO.css  index-Dv_ef59p.js  index-DysKDD8R.css  index-Xz4GYDhA.css
crates/mapit-server/src/: lib.rs  state.rs  ws.rs
crates/mapit-server/src/api/: mod.rs
docs/: 01-PRD.md  02-TRD.md  03-graph-data-model.md  04-app-flow.md  05-backend-schema.md  06-implementation-plan.md  07-MASTER-AI-PROMPT.md  08-ui-refinement.md
web/mapit-web/: index.html  package-lock.json  package.json  tailwind.config.js
web/mapit-web/src/: App.tsx  api-client.ts  index.css  store.ts  types.ts  ws-client.ts
web/mapit-web/src/components/: BgProgressBar.tsx  Breadcrumb.tsx  ConfirmDialog.tsx  GraphView.tsx  SearchBar.tsx  TopBar.tsx
web/mapit-web/src/screens/: AskPanel.tsx  ExternalDetailPanel.tsx  FlawsReport.tsx  FunctionDetailPanel.tsx  LoadingScreen.tsx  MapProgressScreen.tsx  NeighborsView.tsx  SettingsPanel.tsx  SimulationView.tsx  SystemOverview.tsx  TraceView.tsx
