[workspace]
members = [
    "crates/mapit-core",
    "crates/mapit-ai",
    "crates/mapit-server",
    "crates/mapit-cli",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1.45.1", features = ["full"] }

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }

# error handling
anyhow = { version = "1.0.98" }
thiserror = { version = "2.0.12" }

# logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# hashing
sha2 = { version = "0.10.9" }
hex = { version = "0.4.3" }

# time
chrono = { version = "0.4.41", features = ["serde"] }

# tree-sitter
tree-sitter = { version = "0.25.6" }

# SQLite
rusqlite = { version = "0.32.1", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"], default-features = false }

# graph algorithms
petgraph = { version = "0.8.1" }

# embedded assets
rust-embed = { version = "8.11.0" }


