[package]
name = "mapit-ai"
version = "0.2.0"
edition = "2021"
description = "AI enrichment layer for the mapit codebase mapper — summarization, flaw detection, simulation"
license = "MIT"
repository = "https://github.com/patchyevolve/mapit"
homepage = "https://github.com/patchyevolve/mapit"
keywords = ["codebase", "ai", "code-analysis", "llm"]
categories = ["development-tools", "artificial-intelligence"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
mapit-core = { workspace = true }
