[package]
name = "mapit-cli"
version = "0.4.0"
edition = "2021"
description = "AI-powered interactive codebase mapper — CLI tool that builds call-graphs, enriches with AI, and serves a live web UI"
repository = "https://github.com/patchyevolve/mapit"
homepage = "https://github.com/patchyevolve/mapit"
keywords = ["codebase", "mapper", "call-graph", "static-analysis", "ai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "mapit"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
mapit-core = { workspace = true }
mapit-ai = { workspace = true }
mapit-server = { workspace = true }
indicatif = "0.17.11"
rpassword = "7.3.1"
webbrowser = "1.2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
