[package]
name = "mapit-core"
version = "0.4.0"
edition = "2021"
description = "Core data model, graph builder, and language parsers for the mapit codebase mapper"
repository = "https://github.com/patchyevolve/mapit"
homepage = "https://github.com/patchyevolve/mapit"
keywords = ["codebase", "mapper", "call-graph", "static-analysis"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
petgraph = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.23.2"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
ignore = "0.4.23"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.20.0"
