[package]
name = "mapit-server"
version = "0.5.0"
edition = "2021"
description = "Web server backend for the mapit codebase mapper — REST API + WebSocket"
repository = "https://github.com/patchyevolve/mapit"
homepage = "https://github.com/patchyevolve/mapit"
keywords = ["codebase", "web-server", "code-analysis"]
categories = ["development-tools", "web-programming"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8.4", features = ["ws"] }
futures = { version = "0.3.31" }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
mapit-core = { workspace = true }
mapit-ai = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { version = "2.0.5" }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
